--- a/src/gems/Procfile
+++ b/src/gems/Procfile
@@ -1,2 +1,2 @@
 
-web: gunicorn -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT hello_world.main:app
+web: gunicorn -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT gems.main:app
