--- a/src/gems/pyproject.toml
+++ b/src/gems/pyproject.toml
@@ -6,7 +6,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "~3.10"
 fastapi = "^0.88.0"
 uvicorn = "^0.20.0"
 httpx = "^0.27.2"
